<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Timer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="fancy_rit_bricks">Fancy RIT Bricks</string>
    <string name="chronokick_v1">ChronoKick V1</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="calendar">calendar</string>
    <string name="home">Home</string>
    <string name="autocompletetextview">AutoCompleteTextView</string>
    <string name="purpleplanet">purpleplanet</string>
    <string name="erebus">erebus</string>
    <string name="action_settings">Settings</string>
    <string name="tasks">Tasks</string>
    <string name="add_task">Add a Task</string>
    <string name="create_task">Create task</string>
    <string name="promptTaskName">"Enter task name: "</string>
    <string name="taskName" >Task Name</string>
    <string name="promptDueDate">"Enter the due date of the task: "</string>
    <string name="duedate">mm/dd/yyyy</string>
    <string name="taskDescription">"Enter the description of the task:"</string>
    <string name="hintDescription">Description</string>
</resources>
