<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bricks"
    tools:context="MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chronokick_v1"
        android:textColor="#002AFF"
        android:textColorHighlight="#F81D1D"
        android:textColorHint="#AF1515"
        android:textSize="24sp" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startChronometer"
        android:text="@string/start" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pauseChronometer"
        android:text="@string/pause" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="resetChronometer"
        android:text="@string/reset" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fancy_rit_bricks"
        android:textColor="#FF5722" />

    <Button
        android:id="@+id/calendarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendar" />

    <Button
        android:id="@+id/taskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks" />


</LinearLayout>